--- a/scss/object/component/_cta.scss
+++ b/scss/object/component/_cta.scss
@@ -5,10 +5,11 @@
 .c-cta {
   background: $color-sakura;
   position: relative;
-  padding: 70px 0;
+  padding: 80px 0;
   &__title {
     margin-bottom: 40px;
     font-size: 38px;
+    font-weight: 600;
     small {
       font-size: 20px;
       display: block;
