--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,8 @@
 @use "object/project/_job.scss";
 @use "object/project/member_interview.scss";
 @use "object/project/initiatives.scss";
+@use "object/project/_flow.scss";
+@use "object/project/_education_welfare.scss";
 
 // layout
 @use "layout/_common.scss";
