--- a/scss/layout/_common.scss
+++ b/scss/layout/_common.scss
@@ -67,12 +67,20 @@
   font-size: 42px;
   border-left: 3px solid #d80576;
   line-height: 1.4;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   padding-left: 25px;
+  font-weight: bold;
   small {
     font-size: 14px;
     display: block;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+  }
+  &--small {
+    font-size: 14px;
+    small {
+      font-size: 16px;
+      margin-bottom: 5px;
+    }
   }
 }
 
