TOP_スマホ調整

--- a/scss/object/project/_interview.scss
+++ b/scss/object/project/_interview.scss
@@ -7,14 +7,23 @@
     &__list {
       &-item {
         height: 300px !important;
+        @include for-device(tablet) {
+          height: auto !important;
+        }
         &::before {
           display: none;
         }
         a {
           h3 {
             font-size: 34px;
+            @include for-device(tablet) {
+              font-size: 24px;
+            }
             small {
               font-size: 18px;
+              @include for-device(tablet) {
+                font-size: 12px;
+              }
             }
           }
         }
@@ -23,11 +32,20 @@
         }
       }
     }
+    &__content {
+      @include for-device(tablet) {
+        width: 90%;
+        margin: 0 auto;
+      }
+    }
   }
   .name__person {
     small {
       b {
         font-size: 20px;
+        @include for-device(tablet) {
+          font-size: 14px;
+        }
       }
     }
   }
@@ -36,6 +54,9 @@
 .p-interview {
   &__title {
     margin-bottom: 120px !important;
+    @include for-device(tablet) {
+      margin-bottom: 40px !important;
+    }
   }
   &__list {
     &-item {
@@ -43,6 +64,7 @@
       height: 330px;
       background: #222222;
       background: linear-gradient(215deg, rgba(34, 34, 34, 1) 0%, rgba(107, 107, 107, 0) 100%);
+
       a {
         display: flex;
         flex-direction: column;
@@ -52,6 +74,9 @@
         height: 100%;
         position: relative;
         z-index: 999;
+        @include for-device(tablet) {
+          padding-block: 60px 10px;
+        }
         i {
           top: 0;
           left: 0;
@@ -60,6 +85,10 @@
           padding: 5px 25px 5px 10px;
           background-color: #d80576;
           clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+          font-size: 12px;
+          @include for-device(tablet) {
+            font-size: 12px;
+          }
         }
         h3 {
           font-size: 36px;
@@ -74,6 +103,9 @@
           border-bottom: 1px solid #fff;
           margin-bottom: 20px;
           width: 70%;
+          @include for-device(tablet) {
+            margin-bottom: 10px;
+          }
           &__position {
             display: flex;
             align-items: center;
@@ -98,11 +130,17 @@
             font-size: 22px;
             display: flex;
             align-items: center;
+            @include for-device(tablet) {
+              font-size: 14px;
+            }
             small {
               font-size: 14px;
               display: inline-block;
               width: fit-content;
               margin-left: 30px;
+              @include for-device(tablet) {
+                font-size: 7px;
+              }
             }
           }
         }
@@ -114,6 +152,11 @@
         width: 260px;
         height: 375px;
         z-index: -1;
+        @include for-device(tablet) {
+          width: 150px;
+          height: 214px;
+          object-fit: contain;
+        }
       }
     }
   }
