--- a/scss/object/component/_cta.scss
+++ b/scss/object/component/_cta.scss
@@ -6,11 +6,15 @@
   background: $color-sakura;
   position: relative;
   padding: 80px 0;
+  overflow: hidden;
   &__title {
     margin-bottom: 40px;
     font-size: 38px;
     font-weight: 600;
     color: #fff;
+    @include for-device(tablet) {
+      font-size: 24px;
+    }
     small {
       font-size: 20px;
       display: block;
@@ -27,10 +31,21 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
+    @include for-device(tablet) {
+      top: -40px;
+      right: -70px;
+      background-size: contain;
+      width: 80%;
+      height: 80%;
+    }
   }
   &__inner {
     max-width: 1025px;
     margin: 0 auto;
+    @include for-device(tablet) {
+      width: 90%;
+      text-align: center;
+    }
   }
   &.w-90 {
     width: 90%;
@@ -55,6 +70,11 @@
         font-size: 20px;
         display: block;
       }
+    }
+  }
+  .btn {
+    @include for-device(tablet) {
+      margin: 0 auto;
     }
   }
 }
