--- a/scss/object/project/_benefits.scss
+++ b/scss/object/project/_benefits.scss
@@ -17,6 +17,13 @@
     & > div {
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
+      @include for-device(tablet) {
+        grid-template-columns: 1fr;
+        text-align: center;
+        .btn {
+          margin: 0 auto;
+        }
+      }
     }
   }
 }
