--- a/scss/object/project/_vision.scss
+++ b/scss/object/project/_vision.scss
@@ -5,6 +5,9 @@
 .home {
   .p-vision {
     padding-block: 0;
+    @include for-device(tablet) {
+      text-align: center;
+    }
     .section-transition {
       transition: opacity 1s ease-in-out;
     }
@@ -29,9 +32,18 @@
       font-weight: bold;
       line-height: 1.4em;
       margin-bottom: 30px;
+      @include for-device(tablet) {
+        font-size: 24px;
+      }
     }
     &__desc {
       margin-bottom: 40px;
+    }
+    .btn {
+      @include for-device(tablet) {
+        width: 90%;
+        margin: 0 auto;
+      }
     }
   }
 }
