サイト調整

--- a/scss/object/project/_job.scss
+++ b/scss/object/project/_job.scss
@@ -26,6 +26,11 @@
       }
       table {
         width: 85%;
+        tbody {
+          display: flex;
+          flex-direction: column;
+          align-items: baseline;
+        }
         tr {
           display: inline-table;
           &:not(:last-child) {
