--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,7 @@
 
 // utility
 @use "object/utility/_text.scss";
+@use "object/utility/_spacing.scss";
 
 // コンポーネント
 @use "object/component/_title.scss";
