--- a/scss/object/project/_education_welfare.scss
+++ b/scss/object/project/_education_welfare.scss
@@ -22,12 +22,20 @@
         h3 {
           font-size: 30px;
           margin-bottom: 20px;
+          font-feature-settings: "palt";
           small {
             margin-bottom: 0;
           }
         }
         &:first-child {
           grid-column: span 2;
+        }
+        p {
+          line-height: 1.8em;
+        }
+        small {
+          display: block;
+          margin-top: 10px;
         }
       }
     }
@@ -39,7 +47,7 @@
     &--benefits {
       background-color: #222222;
       margin: 60px 0 40px;
-      padding: 120px 40px 80px;
+      padding: 120px 40px 40px;
       position: relative;
     }
 
