--- a/scss/object/project/_initiatives.scss
+++ b/scss/object/project/_initiatives.scss
@@ -21,6 +21,14 @@
     }
   }
 
+  &__decoration {
+    ul {
+      li {
+        position: absolute;
+      }
+    }
+  }
+
   &__inner {
     max-width: 1080px;
     margin: 0 auto;
@@ -75,6 +83,385 @@
         &:hover {
           &::before {
             top: 60%;
+          }
+        }
+      }
+    }
+  }
+
+  #community_engagement {
+    .p-initiatives__bg {
+      .p-initiatives__decoration {
+        ul {
+          li {
+            &:nth-child(1) {
+              top: 0;
+              left: -40px;
+            }
+            &:nth-child(2) {
+              bottom: 0;
+              left: 47%;
+              transform: translateX(-50%) rotate(-80deg);
+              img {
+                width: 50%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  #wire_art_activities {
+    .p-initiatives__bg {
+      &:nth-of-type(1) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -150px;
+                right: 30%;
+                transform: rotate(-20deg);
+                img {
+                  width: 70%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(2) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -50px;
+                left: 10%;
+                transform: rotate(-5deg);
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(3) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                bottom: -30px;
+                right: 10%;
+                transform: rotate(-80deg);
+                img {
+                  width: 60%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(4) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -70px;
+                left: -30px;
+                transform: rotate(-100deg);
+                img {
+                  width: 70%;
+                }
+              }
+              &:nth-child(2) {
+                bottom: -80px;
+                left: 40%;
+                transform: translateX(-50%) rotate(-20deg);
+
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(6) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -40px;
+                left: 40px;
+
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(8) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -150px;
+                right: 10%;
+                transform: rotate(-80deg);
+                img {
+                  width: 60%;
+                }
+              }
+
+              &:nth-child(2) {
+                top: -80px;
+                left: -20px;
+                transform: rotate(-100deg);
+                img {
+                  width: 70%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(9) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -80px;
+                right: 20%;
+                transform: rotate(-10deg);
+                img {
+                  width: 70%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  #events {
+    .p-initiatives__bg {
+      &:nth-of-type(1) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: 0;
+                left: -40px;
+              }
+              &:nth-child(2) {
+                bottom: 0;
+                left: 47%;
+                transform: translateX(-50%) rotate(-80deg);
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(2) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                bottom: -30px;
+                right: 10%;
+                transform: rotate(-80deg);
+                img {
+                  width: 60%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(3) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -80px;
+                left: -20px;
+                transform: rotate(-100deg);
+                img {
+                  width: 70%;
+                }
+              }
+              &:nth-child(2) {
+                bottom: -80px;
+                left: 40%;
+                transform: translateX(-50%) rotate(-20deg);
+
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(5) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -50px;
+                left: 10%;
+                transform: rotate(-5deg);
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(6) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                bottom: -30px;
+                right: 10%;
+                transform: rotate(-80deg);
+                img {
+                  width: 60%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  #manufacturing {
+    .p-initiatives__bg {
+      &:nth-of-type(1) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: 0;
+                left: -40px;
+              }
+              &:nth-child(2) {
+                bottom: 0;
+                left: 47%;
+                transform: translateX(-50%) rotate(-80deg);
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(2) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                bottom: -30px;
+                right: 10%;
+                transform: rotate(-80deg);
+                img {
+                  width: 60%;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  #others {
+    .p-initiatives__bg {
+      &:nth-of-type(1) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -30px;
+                right: 10%;
+                transform: translateX(-50%) rotate(-20deg);
+                img {
+                  width: 50%;
+                }
+              }
+              &:nth-child(2) {
+                bottom: -20px;
+                left: 52%;
+                transform: translateX(-50%) rotate(-80deg);
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(2) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                top: -30px;
+                right: 10%;
+                transform: translateX(-50%) rotate(-20deg);
+                img {
+                  width: 50%;
+                }
+              }
+              &:nth-child(2) {
+                bottom: -20px;
+                left: 52%;
+                transform: translateX(-50%) rotate(-80deg);
+                img {
+                  width: 50%;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &:nth-of-type(3) {
+        .p-initiatives__decoration {
+          ul {
+            li {
+              &:nth-child(1) {
+                bottom: -30px;
+                left: 10%;
+                transform: translateX(-50%) rotate(-20deg);
+                img {
+                  width: 50%;
+                }
+              }
+            }
           }
         }
       }
