--- a/scss/object/project/_vision.scss
+++ b/scss/object/project/_vision.scss
@@ -68,6 +68,7 @@
           .desc {
             font-size: 20px;
             margin-bottom: 40px;
+            line-height: 2em;
           }
         }
 
