--- a/scss/object/project/_interview.scss
+++ b/scss/object/project/_interview.scss
@@ -87,7 +87,9 @@
           clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
           font-size: 12px;
           @include for-device(tablet) {
-            font-size: 12px;
+            padding: 5px 4px 5px 8px;
+            font-size: 9px;
+            letter-spacing: -0.1em;
           }
         }
         h3 {
