--- a/scss/object/component/_title.scss
+++ b/scss/object/component/_title.scss
@@ -31,6 +31,9 @@
   padding: 5px 55px 5px 10px;
   background-color: #d80576;
   clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+  @include for-device(tablet) {
+    font-size: 11px;
+  }
   span {
     font-weight: bold;
   }
