--- a/scss/object/project/_education_welfare.scss
+++ b/scss/object/project/_education_welfare.scss
@@ -8,30 +8,49 @@
     margin: 60px 0 40px;
     padding: 80px 40px;
     position: relative;
+    @include for-device(tablet) {
+      padding: 60px 20px;
+    }
     &-list {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 20px;
       margin-top: 30px;
       margin-bottom: 60px;
+      @include for-device(tablet) {
+        margin-top: 0;
+        grid-template-columns: 1fr;
+      }
       &-item {
         grid-column: span 1;
         background-color: #000;
         padding: 40px;
         border-radius: 10px;
+        @include for-device(tablet) {
+          padding: 25px 25px;
+        }
         h3 {
           font-size: 30px;
           margin-bottom: 20px;
           font-feature-settings: "palt";
+          @include for-device(tablet) {
+            font-size: 18px;
+          }
           small {
             margin-bottom: 0;
           }
         }
         &:first-child {
           grid-column: span 2;
+          @include for-device(tablet) {
+            grid-column: span 1;
+          }
         }
         p {
           line-height: 1.8em;
+          @include for-device(tablet) {
+            font-size: 14px;
+          }
         }
         small {
           display: block;
@@ -49,6 +68,14 @@
       margin: 60px 0 40px;
       padding: 120px 40px 40px;
       position: relative;
+      @include for-device(tablet) {
+        padding: 70px 20px;
+      }
+
+      ul {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 15px;
+      }
     }
 
     &--programs {
@@ -56,6 +83,9 @@
       margin: 60px 0 40px;
       padding: 60px 40px;
       position: relative;
+      @include for-device(tablet) {
+        padding: 70px 25px;
+      }
 
       &-list {
         &-item {
@@ -64,6 +94,10 @@
           background-color: #000;
           gap: 40px;
           align-items: center;
+          @include for-device(tablet) {
+            flex-direction: column;
+            row-gap: 15px;
+          }
           &:not(:last-child) {
             margin-bottom: 20px;
           }
@@ -73,9 +107,13 @@
           &-title {
             font-size: 26px;
             margin-bottom: 10px;
+            text-align: center;
           }
           &-icon {
             width: 120px;
+            @include for-device(tablet) {
+              width: auto !important;
+            }
           }
         }
       }
@@ -83,5 +121,8 @@
   }
   &__img {
     margin-bottom: 160px;
+    @include for-device(tablet) {
+      margin-bottom: 80px;
+    }
   }
 }
