--- a/scss/object/project/_flow.scss
+++ b/scss/object/project/_flow.scss
@@ -7,8 +7,21 @@
     margin-bottom: 80px;
     &-message {
       gap: 80px;
+      @include for-device(tablet) {
+        flex-direction: column;
+        row-gap: 20px;
+      }
       &-left {
         max-width: 350px;
+        @include for-device(tablet) {
+          img {
+            width: 100%;
+            margin: 0 auto;
+            aspect-ratio: 1/1;
+            object-fit: cover;
+            object-position: top;
+          }
+        }
       }
 
       &-right {
@@ -18,18 +31,27 @@
           line-height: 1.4em;
           font-weight: 600;
           margin-bottom: 20px;
+          @include for-device(tablet) {
+            font-size: 22px;
+          }
         }
         p {
           font-size: 18px;
           line-height: 1.8em;
           font-weight: 300;
           margin-bottom: 20px;
+          @include for-device(tablet) {
+            font-size: 14px;
+          }
         }
         small {
           display: block;
           width: fit-content;
           margin-left: auto;
           font-size: 20px;
+          @include for-device(tablet) {
+            font-size: 16px;
+          }
         }
       }
     }
@@ -40,10 +62,20 @@
       padding: 25px;
       background-color: #222222;
       gap: 40px;
+      @include for-device(tablet) {
+        flex-direction: column;
+        row-gap: 0px;
+        justify-content: center;
+        align-items: center;
+        padding: 15px;
+      }
       &:not(:last-child) {
         margin-bottom: 20px;
       }
       &-text {
+        @include for-device(tablet) {
+          text-align: center;
+        }
         .step {
           color: $color-sakura;
           font-weight: bold;
