--- a/scss/object/project/_member_interview.scss
+++ b/scss/object/project/_member_interview.scss
@@ -47,23 +47,40 @@
 
   &__img {
     margin-bottom: 60px;
+    @include for-device(tablet) {
+      margin-bottom: 30px;
+    }
   }
 
   &__text {
     margin-bottom: 80px;
     padding-inline: 40px;
+    @include for-device(tablet) {
+      padding-inline: 10px;
+    }
     &-title {
       font-size: 40px;
       margin-bottom: 20px;
+      font-weight: bold;
+      @include for-device(tablet) {
+        font-size: 22px;
+        margin-bottom: 10px;
+      }
     }
     &-desc {
       line-height: 2em;
+      @include for-device(tablet) {
+        font-size: 14px;
+      }
     }
   }
   &__flow {
     background-color: #393939;
     padding: 80px 100px;
     position: relative;
+    @include for-device(tablet) {
+      padding: 70px 25px 40px;
+    }
     &-cat {
       top: 0;
       left: 0;
@@ -72,6 +89,12 @@
       padding: 5px 25px 5px 10px;
       background-color: #d80576;
       clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+
+      @include for-device(tablet) {
+        padding: 5px 25px 5px 10px;
+        font-size: 11px;
+      }
+
       small {
         font-weight: bold;
         letter-spacing: 0.1em;
