--- a/scss/object/project/_vision.scss
+++ b/scss/object/project/_vision.scss
@@ -56,19 +56,32 @@
 
     &__value {
       padding-inline: 30px;
+      @include for-device(tablet) {
+        padding-inline: 0px;
+      }
       &-contents {
         margin-bottom: 60px;
         gap: 80px;
         align-items: flex-start;
+        @include for-device(tablet) {
+          flex-direction: column;
+          row-gap: 20px;
+        }
         .left {
           max-width: 562px;
         }
         .right {
           width: 50%;
+          @include for-device(tablet) {
+            width: 100%;
+          }
           .desc {
             font-size: 20px;
             margin-bottom: 40px;
             line-height: 2em;
+            @include for-device(tablet) {
+              font-size: 16px;
+            }
           }
         }
 
@@ -76,7 +89,11 @@
           background-color: #222222;
           padding: 40px 0px;
           &:not(:last-child) {
+            padding: 25px 0;
             margin-bottom: 80px;
+            @include for-device(tablet) {
+              margin-bottom: 40px;
+            }
           }
         }
 
@@ -88,6 +105,11 @@
           border-bottom: 1px solid #585858;
           align-items: center;
           justify-content: space-between;
+          @include for-device(tablet) {
+            flex-direction: column;
+            align-items: baseline;
+            row-gap: 10px;
+          }
           span {
             font-size: 28px;
             border-left: 3px solid #d80576;
@@ -96,6 +118,11 @@
           }
           .meta {
             display: flex;
+            @include for-device(tablet) {
+              flex-direction: column;
+              align-items: baseline;
+              row-gap: 10px;
+            }
             p {
               margin-right: 20px;
               font-size: 20px;
@@ -121,6 +148,9 @@
 
         &-body {
           padding-inline: 30px;
+          @include for-device(tablet) {
+            padding-inline: 25px;
+          }
           &-title {
             text-align: center;
             margin-bottom: 60px;
@@ -128,27 +158,51 @@
               font-size: 30px;
               margin-bottom: 20px;
               font-weight: 600;
+              @include for-device(tablet) {
+                font-size: 20px;
+              }
+            }
+            @include for-device(tablet) {
+              .desc {
+                font-size: 14px;
+              }
             }
           }
           &-list {
             &-item {
               gap: 50px;
               align-items: center;
+              @include for-device(tablet) {
+                flex-direction: column;
+                row-gap: 20px;
+              }
               h4 {
                 font-size: 22px;
                 margin-bottom: 20px;
               }
               &:not(:last-child) {
                 margin-bottom: 80px;
+                @include for-device(tablet) {
+                  margin-bottom: 60px;
+                }
               }
               &:nth-child(even) {
                 flex-direction: row-reverse;
+                @include for-device(tablet) {
+                  flex-direction: column;
+                }
               }
               .left {
                 width: 40%;
+                @include for-device(tablet) {
+                  width: 100%;
+                }
               }
               .right {
                 width: 60%;
+                @include for-device(tablet) {
+                  width: 100%;
+                }
               }
               .desc {
                 line-height: 2em;
