--- a/scss/foundation/_index.scss
+++ b/scss/foundation/_index.scss
@@ -61,3 +61,15 @@ body {
     display: inline-block;
   }
 }
+
+#recruit {
+  main {
+    a {
+      overflow: visible;
+    }
+  }
+
+  .l-footer-area-banner {
+    display: none;
+  }
+}
