--- a/scss/object/project/_education_welfare.scss
+++ b/scss/object/project/_education_welfare.scss
@@ -69,12 +69,11 @@
       padding: 120px 40px 40px;
       position: relative;
       @include for-device(tablet) {
-        padding: 70px 20px;
-      }
-
-      ul {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        gap: 15px;
+        padding: 70px 20px 40px;
+        ul {
+          grid-template-columns: repeat(2, minmax(0, 1fr));
+          gap: 15px;
+        }
       }
     }
 
