--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,3 +30,4 @@
 @use "object/component/cta.scss";
 @use "object/component/hero.scss";
 @use "object/component/subpage_link.scss";
+@use "object/component/animation.scss";
