--- a/scss/layout/_common.scss
+++ b/scss/layout/_common.scss
@@ -2,6 +2,22 @@
 @use "sass:map";
 @use "../foundation" as *;
 
+.br-pc {
+  display: inline;
+}
+.br-sp {
+  display: none;
+}
+
+@include for-device(tablet) {
+  .br-pc {
+    display: none;
+  }
+  .br-sp {
+    display: inline;
+  }
+}
+
 .l-page {
   &-kv {
     img {
@@ -18,7 +34,7 @@
   margin-inline: auto;
 }
 
-.l-page-title {
+.l-page-title02 {
   &__title {
     padding-inline: 50px;
     padding-block: 60px;
@@ -49,6 +65,7 @@
     }
 
     .breadcrumb {
+      font-weight: 400;
       @include for-device(tablet) {
         margin-top: 20px;
         padding-left: 20px;
@@ -91,6 +108,7 @@
   @include for-device(tablet) {
     font-size: 28px;
     margin-bottom: 30px;
+    padding-left: 15px;
   }
   small {
     font-size: 14px;
@@ -157,12 +175,12 @@
     position: absolute;
     top: 0;
     right: 0;
-    background-image: url(../../assets/recruit/images/common/sakura_bg.svg);
+    background-image: url(../../assets/images/recruit/common/sakura_bg.svg);
     background-position: center right;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    background-size: 50%;
+    background-size: 40%;
   }
   a {
     @include for-device(tablet) {
@@ -187,7 +205,7 @@
     }
   }
   img {
-    right: 120px;
+    right: 5%;
     @include for-device(tablet) {
       right: 0;
     }
