--- a/scss/object/component/_hero.scss
+++ b/scss/object/component/_hero.scss
@@ -16,6 +16,7 @@
   &__title {
     font-size: 32px;
     margin-bottom: 20px;
+    font-weight: 600;
     @include for-device(tablet) {
       font-size: 24px;
     }
@@ -27,6 +28,7 @@
       @include for-device(tablet) {
         font-size: 20px;
         text-indent: 2.2em;
+        margin-top: 10px;
       }
       &::before {
         content: "";
@@ -49,6 +51,12 @@
     line-height: 1.8em;
     @include for-device(tablet) {
       margin-bottom: 0px;
+      font-size: 14px;
+    }
+  }
+  .btn {
+    @include for-device(tablet) {
+      margin-top: 30px;
     }
   }
 }
