--- a/scss/object/project/_about.scss
+++ b/scss/object/project/_about.scss
@@ -13,6 +13,10 @@
       font-size: 16px;
       position: relative;
       z-index: 1;
+      @include for-device(tablet) {
+        line-height: 2.4em;
+        font-size: 14px;
+      }
     }
   }
 
