--- a/scss/object/project/_benefits.scss
+++ b/scss/object/project/_benefits.scss
@@ -5,6 +5,9 @@
 .p-benefits {
   padding-block: 0;
   position: relative;
+  @include for-device(tablet) {
+    width: 100%;
+  }
   &__bg {
   }
   &__content {
@@ -12,8 +15,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: calc((1280 / 1366) * 100vw);
-    width: 1280px;
+    max-width: 1025px;
+    width: 100%;
     & > div {
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
