--- a/scss/object/project/_job.scss
+++ b/scss/object/project/_job.scss
@@ -14,8 +14,9 @@
   &__catchcopy {
     font-size: 40px;
     margin-bottom: 20px;
+    font-weight: 600;
     @include for-device(tablet) {
-      font-size: 24px;
+      font-size: 22px;
     }
   }
   &__desc {
