--- a/scss/object/project/_kv.scss
+++ b/scss/object/project/_kv.scss
@@ -10,31 +10,39 @@
   }
 
   .swiper-slide {
-    &:nth-child(3) {
+    opacity: 0 !important;
+    &.swiper-slide-active {
+      opacity: 1 !important;
+    }
+    &-3 {
       .kv__txt {
         img {
           width: calc((530 / 1366) * 100vw);
+          max-width: 680px;
         }
       }
     }
-    &:nth-child(4) {
+
+    &-4 {
       .kv__txt {
         img {
           width: calc((630 / 1366) * 100vw);
+          max-width: 680px;
         }
       }
     }
-    &:nth-child(5) {
+    &-5 {
       .kv__txt {
         top: 35%;
         left: 50%;
         transform: translate(-50%, -50%);
         img {
-          width: 1180px;
+          width: 1100px;
         }
       }
     }
-    &:nth-child(6) {
+
+    &-6 {
       .kv__txt {
         img {
           width: calc((660 / 1366) * 100vw);
