--- a/scss/object/project/_member_interview.scss
+++ b/scss/object/project/_member_interview.scss
@@ -6,6 +6,13 @@
   .name {
     margin-bottom: 20px;
     width: 70%;
+    @include for-device(tablet) {
+      small {
+        font-size: 14px;
+        line-height: 1;
+        display: contents;
+      }
+    }
     .flex {
       gap: 20px;
     }
@@ -33,13 +40,24 @@
       font-size: 22px;
       display: flex;
       align-items: center;
+      @include for-device(tablet) {
+        flex-direction: column;
+        align-items: baseline;
+        margin-top: 10px;
+      }
       small {
         font-size: 12px;
         display: inline-block;
         width: fit-content;
         margin-left: 30px;
+        @include for-device(tablet) {
+          margin-left: 0px;
+        }
         b {
           font-size: 24px;
+          @include for-device(tablet) {
+            font-size: 20px;
+          }
         }
       }
     }
@@ -63,7 +81,7 @@
       margin-bottom: 20px;
       font-weight: bold;
       @include for-device(tablet) {
-        font-size: 22px;
+        font-size: 20px;
         margin-bottom: 10px;
       }
     }
