--- a/scss/object/project/_education_welfare.scss
+++ b/scss/object/project/_education_welfare.scss
@@ -102,11 +102,11 @@
           }
           &-text {
             font-size: 14px;
+            width: 80%;
           }
           &-title {
             font-size: 26px;
             margin-bottom: 10px;
-            text-align: center;
           }
           &-icon {
             width: 120px;
